Fix a missing color

--- a/PVEDiscordDark/sass/PVEDiscordDark.css
+++ b/PVEDiscordDark/sass/PVEDiscordDark.css
@@ -264,7 +264,7 @@
 
 .x-btn-disabled {
   background-image: none;
-  background-color: #737fab !important; }
+  background-color: #f33434 !important; }
 
 .x-btn-icon-el.x-btn-icon-el-default-toolbar-small.fa.fa-undo, .x-btn-icon-el.x-btn-icon-el-default-toolbar-small.fa.fa-terminal, .x-btn-icon-el.x-btn-icon-el-default-toolbar-small.fa.fa-send-o, .x-btn-icon-el.x-btn-icon-el-default-toolbar-small.fa.fa-fw.fa-ellipsis-v, .x-btn-icon-el.x-btn-icon-el-default-toolbar-small.fa.fa-refresh {
   color: #fff; }
@@ -302,7 +302,7 @@
   border-color: #23272a; }
 
 .x-tab {
-  background: #737fab;
+  background: #f33434;
   color: #fff;
   border-width: 0; }
 
@@ -329,7 +329,7 @@
   background: #23272a; }
 
 .x-tab-disabled {
-  background: #737fab !important; }
+  background: #f33434 !important; }
 
 .x-window-body {
   background: #23272a;
