--- a/PVEDiscordDark/sass/x/_btn.sass
+++ b/PVEDiscordDark/sass/x/_btn.sass
@@ -27,7 +27,7 @@
 
 .x-btn-disabled
 	background-image: none
-	background-color: #737fab !important
+	background-color: $pastelpink_inactive !important
 
 .x-btn-icon-el
 	&.x-btn-icon-el-default-toolbar-small
