--- a/PVEDiscordDark/sass/x/_tab.sass
+++ b/PVEDiscordDark/sass/x/_tab.sass
@@ -1,5 +1,5 @@
 .x-tab
-	background: #737fab
+	background: $pastelpink_inactive
 	color: #fff
 	border-width: 0
 
@@ -26,4 +26,4 @@
 	background: $darker
 
 .x-tab-disabled
-	background: #737fab !important
+	background: $pastelpink_inactive !important
